# finch-flight-software

./: .checkpatch.conf  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Kconfig  LINUX_MACOS_SETUP.md  MANUAL_SETUP.md  README.md  SETUP.md  WINDOWS_SETUP.md  finch-flight-software-env.sh  prj.conf  pyvenv.cfg  signing-key.pem  west.yml
.github/workflows/: build-lib.yml  build-only.yml  build-tests.yml  build.yml  checkpatch.yml  compliance.yml  container-push.yml  container-test.yml  copyright-check.yml  cppcheck.yml  dnm.yml
apps/can-bus/: prj.conf
apps/eps/: CMakeLists.txt  prj.conf
apps/flatsat/: CMakeLists.txt  prj.conf
apps/obc/: CMakeLists.txt  prj.conf
apps/pay/: CMakeLists.txt  prj.conf
apps/pay-raw-spi/: prj.conf
benchmarks/ccsds123b/: CMakeLists.txt  prj.conf
blobs/: Keil.STM32G4xx_DFP.2.1.0.pack  RPI_PICO2-20250911-v1.26.1.uf2
boards/: nucleo_h743zi.overlay  nucleo_h753zi_mcuboot.overlay
boards/obc/: Kconfig.obc  board.cmake  board.yml  obc.dts  obc.yaml  obc.yml
boards/overlays/: nucleo_h743zi.overlay  nucleo_l496zg.overlay
boards/pay/: Kconfig.obc  Kconfig.pay  board.cmake  board.yml  pay.dts  pay.yaml  pay.yml
doc/: docker.md  firmware_design_guidelines.md  manual_setup.md  mcuboot.md  pico.md  setup.md
drivers/bootloader/: CMakeLists.txt  prj.conf
heater-driver/: CMakeLists.txt
heater-driver/src/: PID.c
include/: rtc_internal.h
include/dcmi/: dcmi_ov2640.h
jehan-ADCS/: prj.conf
liam-spi_flash/: prj.conf
lib/: CMakeLists.txt  Kconfig  rtc_internal.c
scripts/: build_mcu.sh  compliance.pl  container_debug.sh  container_flash.sh  container_open.ps1  container_open.sh  copyright-check.py  debug_from_container.sh  dnm.py  flash_from_container.sh  flash_mcuboot.sh  gdb_commands_debug  gdb_commands_flash  gdb_server.ps1  gdb_server.sh  install_dependencies.sh  mock_camera.py  open_container.sh  run_checkpatch.sh  run_cppcheck.sh  run_pyocd_server.ps1  run_pyocd_server.sh  run_pyocd_server_g4.ps1  run_pyocd_server_g4.sh  run_pyocd_server_h7.ps1  run_pyocd_server_h7.sh  setup_python_venv.sh  setup_west_workspace.sh
tests/: CMakeLists.txt  prj.conf
tests/adcs/dev_board/: CMakeLists.txt  prj.conf  testcase.yaml
tests/adcs/dev_board/src/: main.c
tests/ccsds123b/: CMakeLists.txt  prj.conf  testcase.yaml
tests/ccsds123b/benchmark/: CMakeLists.txt  prj.conf  testcase.yaml
tests/ccsds123b/benchmark/src/: arrays.c  image.c  main.c
tests/ccsds123b/debug/: CMakeLists.txt  prj.conf  testcase.yaml
tests/ccsds123b/debug/src/: main.c  reconstructor.c  reconstructor.h
tests/ccsds123b/src/: main.c  reconstructor.c  reconstructor.h
tests/csputils/: CMakeLists.txt
tests/csputils/src/: main.c
tests/image-compression/: CMakeLists.txt
tests/image-compression/src/: main.c
tests/sdmmc/: CMakeLists.txt  prj.conf
tests/sdmmc/src/: main.c
zephyr/: module.yml
(+118 files in other folders)
